--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,14 @@ apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'qqqqqq'
+            keyPassword 'qqqqqq'
+            storeFile file('../rager.jks')
+            storePassword 'qqqqqq'
+        }
+    }
     compileSdkVersion 24
     buildToolsVersion "24.0.3"
     defaultConfig {
@@ -11,6 +19,7 @@ android {
         versionCode 2
         versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.config
     }
     buildTypes {
         release {
@@ -18,9 +27,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
     dataBinding {
         enabled = true
+    }
+    productFlavors {
     }
 }
 
@@ -30,15 +40,15 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'io.reactivex:rxandroid:1.2.1'
-// Because RxAndroid releases are few and far between, it is recommended you also
-// explicitly depend on RxJava's latest version for bug fixes and new features.
+    // Because RxAndroid releases are few and far between, it is recommended you also
+    // explicitly depend on RxJava's latest version for bug fixes and new features.
     compile 'io.reactivex:rxjava:1.1.6'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
-    compile "com.squareup.retrofit2:retrofit:2.1.0"
-    compile "com.squareup.retrofit2:converter-gson:2.1.0"
-    compile "com.squareup.retrofit2:adapter-rxjava:2.1.0"
-    compile "com.facebook.fresco:fresco:0.13.0"
-    compile "jp.wasabeef:fresco-processors:2.0.0"
-    compile "com.github.halysongoncalves:pugnotification:1.8.1"
-    compile "de.greenrobot:eventbus:2.4.0"
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile 'com.facebook.fresco:fresco:0.13.0'
+    compile 'jp.wasabeef:fresco-processors:2.0.0'
+    compile 'com.github.halysongoncalves:pugnotification:1.8.1'
+    compile 'de.greenrobot:eventbus:2.4.0'
 }
